Extending from base.html template. Adding links to movie detail page, for every movie in list

--- a/django/core/templates/core/movie_list.html
+++ b/django/core/templates/core/movie_list.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <body>
+{% extends "base.html" %}
+{% block title %}
+  All the movies
+{% endblock %}
+{% block main %}
     <ul>
       {% for movie in object_list %}
-        <li>{{movie}}</li>
+        <li>
+          <a href="{% url 'core:MovieDetail' pk=movie.id %}">{{ movie }}</a>
+        </li>
       {% empty %}
       <li>No movies yet</li>
       {% endfor %}
     </ul>
-    <p>
-      Using HTTPS? {{request.is_secure|yesno }}
-    </p>
-  </body>
-</html>
+{% endblock %}
