--- a/django/core/templates/core/movie_list.html
+++ b/django/core/templates/core/movie_list.html
@@ -12,4 +12,35 @@
       <li>No movies yet</li>
       {% endfor %}
     </ul>
+    {% if is_paginated %}
+    <nav>
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="{% url 'core:MoviesList' %}?page=1">First</a>
+            </li>
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="{% url 'core:MoviesList' %}?page={{ page_obj.previous_page_number }}">
+                    {{ page_obj.previous_page_number }}
+                </a>
+            </li>
+            {% endif %}
+            <li class="page-item active">
+                <a class="page-link" href="{% url 'core:MoviesList' %}?page={{ page_obj.number }}">
+                    {{ page_obj.number }}
+                </a>
+            </li>
+            {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="{% url 'core:MoviesList' %}?page={{ page_obj.next_page_number }}">
+                    {{ page_obj.next_page_number }}
+                </a>
+            </li>
+            {% endif %}
+            <li class="page-item">
+                <a class="page-link" href="{% url 'core:MoviesList' %}?page=last">Last</a>
+            </li>
+        </ul>
+    </nav>
+    {% endif %}
 {% endblock %}
